# VaultCraft

./: .gitignore  README.md  generate_icons.py  index.html  package-lock.json  package.json  tailwind.config.ts
installer/: vaultcraft.iss
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: license_commands.rs  mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  models.rs  queries.rs
src-tauri/src/db/migrations/: 001_schema_inicial.sql  002_dados_iniciais.sql
src-tauri/src/license/: hardware.rs  mod.rs  service.rs  storage.rs  validator.rs
src-tauri/src/services/: armazenamento.rs  auditoria.rs  backup.rs  exportacao.rs  mod.rs
src-tauri/tests/: backup_test.rs  busca_test.rs  migracao_test.rs  vencimentos_test.rs
src/components/layout/: BarraSuperior.tsx  LayoutPrincipal.tsx  PainelLateral.tsx
src/components/license/: LoginView.tsx
src/domain/: license.ts  modelos.ts
src/help/: conteudo.ts  indice.ts
src/hooks/: useAtalhos.ts  useTema.ts
src/infra/: comandos.ts
src/onboarding/: OnboardingModal.tsx  roteiro.ts
src/pages/: PaginaAjuda.tsx  PaginaBackup.tsx  PaginaBusca.tsx  PaginaConfiguracoes.tsx  PaginaHistorico.tsx  PaginaInicial.tsx  PaginaItem.tsx  PaginaPacotes.tsx  PaginaVencimentos.tsx
src/stores/: appStore.ts  buscaStore.ts  configuracoesStore.ts  itensStore.ts  licenseStore.ts  pastasStore.ts  tagsStore.ts  vencimentosStore.ts
(+7 files in other folders)
