[package]
name = "vaultcraft"
version = "0.1.0"
edition = "2021"
description = "Cofre pessoal offline para documentos, notas e checklists"

[lib]
name = "vaultcraft_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
zip = "2"
base64 = "0.22"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
